# vcdriver

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.rst  Jenkinsfile  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: main.yml
test/: test_auth.py  test_helpers.py  test_vm.py
test/integration/: test_integration.py  test_vm.py
test/unit/: test_config.py  test_folder.py  test_helpers.py  test_session.py  test_vm.py
tests/: test.py
vcdriver/: auth.py  config.py  exceptions.py  folder.py  helpers.py  session.py  vm.py
vcenter/driver/: auth.py  config.py  helpers.py  vm.py
