[metadata]
version = 5.1.2rc1.dev0
name = vcdriver
description = A vcenter driver based on pyvmomi, fabric and pywinrm
url = https://github.com/Osirium/vcdriver
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development

[options]
install_requires =
    colorama
    Fabric3
    pyvmomi
    pywinrm2
    six
packages = find:

[bdist_wheel]
universal = 1

[zest.releaser]
tag-format = v{version}
